--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -7,8 +7,8 @@
 <meta name="author" content="Telemark fylkeskommune">
 <title>{{systemName}}</title>
 <!-- Fonts -->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
 
 <!-- Core -->
 <link rel="stylesheet" href="/public/css/main.css">
