--- a/views/team.html
+++ b/views/team.html
@@ -1,6 +1,6 @@
 <div class="mdl-grid main-content">
   <section class="mdl-cell mdl-cell--12-col">
-    <h4 class="mdl-cell--12-col">Tjenestetorget</h4>
+    <h4 class="mdl-cell--12-col">Servicetorget</h4>
       <div class="mdl-grid">
         {{>list-team}}
       </div>
