--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -13,6 +13,9 @@
 <!-- Core -->
 <link rel="stylesheet" href="/public/css/main.css">
 
+<!-- js -->
+<script defer="" src="https://code.getmdl.io/1.1.1/material.min.js"></script>
+
 <!-- Icons -->
 <link rel="icon" sizes="192x192" href="/public/images/icons/chrome-touch-icon-192x192.png">
 <link rel="apple-touch-icon" href="/public/images/icons/apple-touch-icon-precomposed.png">
@@ -45,8 +48,7 @@
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
             <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link mdl-color-text--black" href="/">Forsiden</a>
-                <a class="mdl-navigation__link mdl-color-text--black" href="/personvern">Personvern</a>
+                <a class="mdl-navigation__link mdl-color-text--black" href="https://forsiden.portalen.t-fk.no">Forsiden</a>
             </nav>
             <form action="/sok" method="post">
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
@@ -66,8 +68,7 @@
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">Navigasjon</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link mdl-color-text--black" href="/">Forsiden</a>
-            <a class="mdl-navigation__link mdl-color-text--black" href="/personvern">Personvern</a>
+            <a class="mdl-navigation__link mdl-color-text--black" href="https://forsiden.portalen.t-fk.no">Forsiden</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
