--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -21,19 +21,21 @@
 <link rel="apple-touch-icon" href="/public/images/icons/apple-touch-icon-precomposed.png">
 <link rel="shortcut icon" href="/public/images/icons/favicon.ico">
 <!-- Piwik -->
+<!-- Piwik -->
 <script type="text/javascript">
-    var _paq = _paq || [];
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function() {
-        var u="https://piwik.service.t-fk.no/";
-        _paq.push(['setTrackerUrl', u+'piwik.php']);
-        _paq.push(['setSiteId', 2]);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-    })();
+  var _paq = _paq || [];
+  _paq.push(["setDomains", ["*.servicetorget.microsite.t-fk.no"]]);
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//piwik.service.t-fk.no/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', 4]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
 </script>
-<noscript><p><img src="https://piwik.service.t-fk.no/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="//piwik.service.t-fk.no/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 </head>
 <body>
